--- a/workflows/Suspend_User_in_Azure_AD_from_Microsoft_Teams/workflow.spec.yaml
+++ b/workflows/Suspend_User_in_Azure_AD_from_Microsoft_Teams/workflow.spec.yaml
@@ -1,9 +1,9 @@
 extension: workflow
 products: ["insightconnect"]
 name: Suspend_User_in_Azure_AD_from_Microsoft_Teams
-title: "Disable User in Azure AD with Microsoft Teams"
-description: "Disable user accounts in Azure AD with Microsoft Teams."
-version: 1.0.1
+title: "Disable User in Azure AD from Microsoft Teams"
+description: "Disable user accounts in Azure AD from Microsoft Teams."
+version: 1.0.2
 vendor: rapid7
 support: rapid7
 status: []
