--- a/workflows/Suspend_User_in_Azure_AD_from_Slack/workflow.spec.yaml
+++ b/workflows/Suspend_User_in_Azure_AD_from_Slack/workflow.spec.yaml
@@ -1,9 +1,9 @@
 extension: workflow
 products: ["insightconnect"]
 name: Suspend_User_in_Azure_AD_from_Slack
-title: "Disable User in Azure AD with Slack"
+title: "Disable User in Azure AD from Slack"
 description: Disable user account in Azure AD with a command in Slack.
-version: 1.0.1
+version: 1.0.2
 vendor: rapid7
 support: rapid7
 status: []
