--- a/workflows/Block_Sender_in_Office_365_with_Teams/workflow.spec.yaml
+++ b/workflows/Block_Sender_in_Office_365_with_Teams/workflow.spec.yaml
@@ -1,9 +1,9 @@
 extension: workflow
 products: ["insightconnect"]
 name: Block_Sender_in_Office_365_with_Teams
-title: "Block Sender in Office 365 with Microsoft Teams"
+title: "Block Sender in Office 365 from Microsoft Teams"
 description: "This workflow blocks a sender or domain in Office 365 using a command sent with Microsoft Teams."
-version: 1.0.1
+version: 1.0.2
 vendor: rapid7
 support: rapid7
 status: []
