--- a/workflows/Force_Password_Reset_in_Azure_AD_from_Slack/workflow.spec.yaml
+++ b/workflows/Force_Password_Reset_in_Azure_AD_from_Slack/workflow.spec.yaml
@@ -1,9 +1,9 @@
 extension: workflow
 products: ["insightconnect"]
 name: Force_Password_Reset_in_Azure_AD_from_Slack
-title: "Force Password Reset in Azure AD with Slack"
+title: "Reset Password in Azure AD from Slack"
 description: Reset a user's Azure AD password with a simple command in Slack.
-version: 1.0.1
+version: 1.0.2
 vendor: rapid7
 support: rapid7
 status: []
