--- a/workflows/InsightVM_Top_25_Remediations_to_JIRA/workflow.spec.yaml
+++ b/workflows/InsightVM_Top_25_Remediations_to_JIRA/workflow.spec.yaml
@@ -1,9 +1,9 @@
 extension: workflow
-products: ["insightconnect"]
+products: ["insightconnect, insightvm"]
 name: InsightVM_Top_25_Remediations_to_JIRA 
 title: "InsightVM Top 25 Remediations to JIRA"
 description: Create and update Jira issues based on top risk-reducing remediation steps from InsightVM.
-version: 1.0.1
+version: 1.0.2
 vendor: rapid7
 support: rapid7
 status: []
