--- a/workflows/InsightVM_Top_25_Remediations_to_Zendesk/workflow.spec.yaml
+++ b/workflows/InsightVM_Top_25_Remediations_to_Zendesk/workflow.spec.yaml
@@ -1,9 +1,9 @@
 extension: workflow
-products: ["insightconnect"]
+products: ["insightconnect, insightvm"]
 name: InsightVM_Top_25_Remediations_to_Zendesk
 title: "IVM Top Remediations to Zendesk"
 description: "This workflow creates solution-based tickets in Zendesk for each of the top 25 remediations in InsightVM.  If there is already a ticket open for a given remediation, the workflow updates the existing ticket with a current list of impacted assets."
-version: 1.0.0
+version: 1.0.1
 vendor: rapid7
 support: rapid7
 status: []
