--- a/workflows/URLScan_with_Slack/workflow.spec.yaml
+++ b/workflows/URLScan_with_Slack/workflow.spec.yaml
@@ -1,15 +1,15 @@
 extension: workflow
 products: ["insightconnect"]
 name: URLScan_with_Slack
-title: "URLScan with Slack"
-description: This workflow looks up a URL given via Slack command in urlscan.io and reports information on the URL back to Slack
-version: 1.0.0
+title: "Enrich URL with urlscan.io from Slack"
+description: This workflow enrichs a URL given via Slack command in urlscan.io and reports information back to Slack
+version: 1.0.1
 vendor: rapid7
 support: rapid7
 status: []
 hub_tags:
   use_cases: [threat_detection_and_response]
-  keywords: [chat, chatops, slack, phishing, work_from_home, covid]
+  keywords: [chat, chatops, slack, phishing, work_from_home]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/URLScan_with_Slack
