--- a/workflows/GeoIP_Lookup_with_Slack/workflow.spec.yaml
+++ b/workflows/GeoIP_Lookup_with_Slack/workflow.spec.yaml
@@ -1,7 +1,7 @@
 extension: workflow
 products: ["insightconnect"]
 name: GeoIP_Lookup_with_Slack
-title: "Enrich IP With IPStack from Slack"
+title: "Enrich IP with IPStack from Slack"
 description: Geolocate an IP address using IPStack's geoip database with a simple Slack command.
 version: 1.0.3
 vendor: rapid7
