--- a/workflows/GeoIP_Lookup_with_Slack/workflow.spec.yaml
+++ b/workflows/GeoIP_Lookup_with_Slack/workflow.spec.yaml
@@ -16,7 +16,7 @@ resources:
   license_url: https://github.com/rapid7/insightconnect-workflows/blob/master/LICENSE
   screenshots:
   - name: slack1.png
-    title: Completed Job In Slack With Valid Input
+    title: Completed Job In Slack with Valid Input
   - name: slack2.png
     title: Completed Job In Slack, Invalid Input
   - name: artifact.png
