--- a/workflows/Blacklist_Malicious_Hashes_with_VirusTotal_and_Carbon_Black_Response/workflow.spec.yaml
+++ b/workflows/Blacklist_Malicious_Hashes_with_VirusTotal_and_Carbon_Black_Response/workflow.spec.yaml
@@ -1,5 +1,5 @@
 extension: workflow
-products: ["insightconnect, insightidr"]
+products: ["insightconnect", "insightidr"]
 name: Blacklist_Malicious_Hashes_with_VirusTotal_and_Carbon_Black_Response
 title: "Blacklist Malicious Hashes with VirusTotal and Carbon Black Response"
 description: "This workflow automates the process of looking up an associated file hash in VirusTotal from an InsightIDR alert."
