--- a/workflows/InsightIDR_Impossible_Location_with_Slack_Chatbot/workflow.spec.yaml
+++ b/workflows/InsightIDR_Impossible_Location_with_Slack_Chatbot/workflow.spec.yaml
@@ -1,5 +1,5 @@
 extension: workflow
-products: ["insightconnect, insightidr"]
+products: ["insightconnect", "insightidr"]
 name: InsightIDR_Impossible_Location_with_Slack_Chatbot
 title: "InsightIDR Impossible Location with Slack Chatbot"
 description: This workflow automates the process of enriching IPs associated with an InsightIDR alert and escalating to the security team if found to be suspicious.
