--- a/workflows/InsightIDR_MultiCountry_Auth_and_Remediation/workflow.spec.yaml
+++ b/workflows/InsightIDR_MultiCountry_Auth_and_Remediation/workflow.spec.yaml
@@ -1,5 +1,5 @@
 extension: workflow
-products: ["insightconnect, insightidr"]
+products: ["insightconnect", "insightidr"]
 name: InsightIDR_MultiCountry_Auth_and_Remediation
 title: "InsightIDR Multi Country Auth and Remediation"
 description: Disable a user account in Active Directory based on a multi-country InsightIDR authentication alert containing more than two countries.
