--- a/workflows/Malicious_Hash_Remediation_with_Cb_Response/workflow.spec.yaml
+++ b/workflows/Malicious_Hash_Remediation_with_Cb_Response/workflow.spec.yaml
@@ -1,5 +1,5 @@
 extension: workflow
-products: ["insightconnect, insightidr"]
+products: ["insightconnect", "insightidr"]
 name: Malicious_Hash_Remediation_with_Cb_Response
 title: "Malicious Hash Remediation with Cb Response"
 description: "This workflow triggers off of InsightIDR's Malicious Hash on Asset alerts and does a lookup of the hash with Team Cymru before banning it with Cb Response"
