--- a/workflows/InsightVM_Top_25_Remediations_to_ServiceNow/workflow.spec.yaml
+++ b/workflows/InsightVM_Top_25_Remediations_to_ServiceNow/workflow.spec.yaml
@@ -1,5 +1,5 @@
 extension: workflow
-products: ["insightconnect, insightvm"]
+products: ["insightconnect", "insightvm"]
 name: InsightVM_Top_25_Remediations_to_ServiceNow
 title: "IVM Top Remediations to ServiceNow"
 description: "This workflow creates solution-based tickets in ServiceNow for each of the top 25 remediations in InsightVM.  If there is already a ticket open for a given remediation, the workflow updates the existing ticket with a current list of impacted assets."
