--- a/workflows/Out_Of_Office_AutoResponse_User_Containment/workflow.spec.yaml
+++ b/workflows/Out_Of_Office_AutoResponse_User_Containment/workflow.spec.yaml
@@ -1,5 +1,5 @@
 extension: workflow
-products: ["insightconnect, insightidr"]
+products: ["insightconnect", "insightidr"]
 name: Out_Of_Office_AutoResponse_User_Containment
 title: "Out of Office AutoResponse User Containment"
 description: This workflow responds to any user event from InsightIDR and determines if the event occurred during or after office hours.
