--- a/workflows/Spearphishing_Remediation_with_Mimecast/workflow.spec.yaml
+++ b/workflows/Spearphishing_Remediation_with_Mimecast/workflow.spec.yaml
@@ -1,5 +1,5 @@
 extension: workflow
-products: ["insightconnect, insightidr"]
+products: ["insightconnect", "insightidr"]
 name: Spearphishing_Remediation_with_Mimecast
 title: "Spearphishing Remediation with Mimecast"
 description: "IDR provides built-in machine learning based detections of spearphishing attempts through DNS queries to spoofed domains. On alert generation, this workflow automatically blocks a sender and creates a managed URL in Mimecast."
