--- a/workflows/Suspicious_User_Login_with_IDR_and_Slack_Chatops/workflow.spec.yaml
+++ b/workflows/Suspicious_User_Login_with_IDR_and_Slack_Chatops/workflow.spec.yaml
@@ -1,5 +1,5 @@
 extension: workflow
-products: ["insightconnect, insightidr"]
+products: ["insightconnect", "insightidr"]
 name: Suspicious_User_Login_with_IDR_and_Slack_Chatops
 title: "Suspicious User Login with IDR and Slack Chatops"
 description: This workflow automates the process of confirming if a user is traveling in other office location using global artifacts before escalating to security via Slack chatbot.
