--- a/workflows/Lookup_Vuln_From_Slack/workflow.spec.yaml
+++ b/workflows/Lookup_Vuln_From_Slack/workflow.spec.yaml
@@ -1,5 +1,5 @@
 extension: workflow
-products: ["insightconnect, insightvm"]
+products: ["insightconnect", "insightvm"]
 name: Lookup_Vuln_From_Slack
 title: "Lookup Vulnerability from Slack"
 description: This workflow accepts a Slack command, looks up the vulnerability in Rapid7's vulnerability database, and posts the vulnerability details back to the same Slack channel.
