--- a/workflows/Get_Ivanti_Agent_Status_From_Slack/workflow.spec.yaml
+++ b/workflows/Get_Ivanti_Agent_Status_From_Slack/workflow.spec.yaml
@@ -15,5 +15,11 @@ resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Get_Ivanti_Agent_Status_From_Slack
   license_url: https://github.com/rapid7/insightconnect-workflows/blob/master/LICENSE
   screenshots:
+  - name: WorkflowOutput.png
+    title: Workflow Output in Slack
   - name: Workflow.png
     title: Workflow Builder View
+  - name: Artifact.png
+    title: Final Report Workflow Artifact
+  - name: Job.png
+    title: Workflow Job
