--- a/workflows/Revoke_User_Session_in_Azure_AD_with_Microsoft_Teams/workflow.spec.yaml
+++ b/workflows/Revoke_User_Session_in_Azure_AD_with_Microsoft_Teams/workflow.spec.yaml
@@ -9,7 +9,7 @@ support: rapid7
 status: []
 hub_tags:
   use_cases: [threat_detection_and_response]
-  keywords: [phishing, email, office365, slack, work_from_home, session]
+  keywords: [phishing, email, office365, teams, chat, chatops, work_from_home]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Purge_Office_365_Revoke_User_Session_in_Azure_AD_with_Slack
