--- a/workflows/Revoke_User_Session_in_Azure_AD_with_Microsoft_Teams/workflow.spec.yaml
+++ b/workflows/Revoke_User_Session_in_Azure_AD_with_Microsoft_Teams/workflow.spec.yaml
@@ -1,7 +1,7 @@
 extension: workflow
 products: ["insightconnect"]
 name: Revoke_User_Session_in_Azure_AD_with_Microsoft_Teams
-title: "Revoke User Session in Azure AD with Microsoft Teams"
+title: "Revoke User Session in Azure AD from Microsoft Teams"
 description: "Revoke a user session forcing them to log in after their next page refresh with a command from Microsoft Teams."
 version: 1.0.1
 vendor: rapid7
