--- a/workflows/Artifact_Examples/workflow.spec.yaml
+++ b/workflows/Artifact_Examples/workflow.spec.yaml
@@ -8,7 +8,7 @@ vendor: community
 support: community
 status: []
 hub_tags:
-  use_cases: [alerting_and_notifications, data_enrichment]
+  use_cases: [data_utility]
   keywords: [example,artifact,enrichment]
   features: []
 resources:
