--- a/workflows/Artifact_Examples/workflow.spec.yaml
+++ b/workflows/Artifact_Examples/workflow.spec.yaml
@@ -9,7 +9,7 @@ support: community
 status: []
 hub_tags:
   use_cases: [data_utility]
-  keywords: [example,artifact,enrichment]
+  keywords: [example]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Artifact_Examples
