--- a/workflows/Get_InsightVM_Host_Info_From_Slack/workflow.spec.yaml
+++ b/workflows/Get_InsightVM_Host_Info_From_Slack/workflow.spec.yaml
@@ -1,15 +1,15 @@
 extension: workflow
 products: ["insightconnect", "insightvm"]
 name: Get_InsightVM_Host_Info_From_Slack
-title: "Get InsightVM Host Info from Slack"
-description: This workflow provides fast, convenient access to information about a given host from InsightVM. When triggered, the workflow fetches asset details from InsightVM and posts them in a Slack thread. Host info includes hostname, IP address, MAC address, operating system, running services, and vulnerability stats.
-version: 1.0.0
+title: "Lookup Host in InsightVM from Slack"
+description: Lookup a host, including IP, MAC, last assessment date, vulnerability statistics, and running services, from a Slack message.
+version: 1.0.1
 vendor: rapid7
 support: rapid7
 status: []
 hub_tags:
   use_cases: [vulnerability_management, asset_inventory]
-  keywords: [InsightVM, Slack, chat]
+  keywords: [InsightVM, Slack, chat, work_from_home]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Get_InsightVM_Host_Info_From_Slack
