--- a/workflows/Lookup_Vuln_From_Slack/workflow.spec.yaml
+++ b/workflows/Lookup_Vuln_From_Slack/workflow.spec.yaml
@@ -3,7 +3,7 @@ products: ["insightconnect", "insightvm"]
 name: Lookup_Vuln_From_Slack
 title: "Lookup Vulnerability from Slack"
 description: This workflow accepts a Slack command, looks up the vulnerability in Rapid7's vulnerability database, and posts the vulnerability details back to the same Slack channel.
-version: 1.1.2
+version: 1.1.3
 vendor: rapid7
 support: rapid7
 status: []
@@ -15,13 +15,13 @@ resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Lookup_Vuln_From_Slack
   license_url: https://github.com/rapid7/insightconnect-workflows/blob/master/LICENSE
   screenshots:
+  - name: execution1.png
+    title: Workflow Execution in Slack, Single Result
+  - name: execution2.png
+    title: Workflow Execution in Slack, Multiple Results
   - name: workflow.png
     title: Workflow View
-  - name: job1.png
-    title: Successful Workflow Job
-  - name: job2.png
-    title: Completed Job In Slack, One Result
-  - name: job3.png
+  - name: job.png
     title: Completed Job In Slack, Multiple Results
   - name: artifact1.png
     title: Final Report Artifact
