deploy-patch-name-typo

--- a/workflows/Deploy_Patch_With_BigFix_From_Teams/workflow.spec.yaml
+++ b/workflows/Deploy_Patch_With_BigFix_From_Teams/workflow.spec.yaml
@@ -1,7 +1,7 @@
 extension: workflow
 products: ["insightconnect"]
 name: Deploy_Patch_With_BigFix_From_Teams
-title: "Deploy Patch with BigFix from Mirosoft Teams"
+title: "Deploy Patch with BigFix from Microsoft Teams"
 description: Deploys a specific patch to a specific host with BigFix from a Microsoft Teams message trigger.
 version: 1.0.0
 vendor: rapid7
