--- a/workflows/Block_Host_with_Palo_Alto_Firewall_from_Microsoft_Teams/workflow.spec.yaml
+++ b/workflows/Block_Host_with_Palo_Alto_Firewall_from_Microsoft_Teams/workflow.spec.yaml
@@ -9,7 +9,7 @@ support: rapid7
 status: []
 hub_tags:
   use_cases: [threat_detection_and_response]
-  keywords: [phishing, email, office365, slack, work_from_home]
+  keywords:  [ransomware, containment, firewall, block, work_from_home, palo, alto]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Block_Host_with_Palo_Alto_Firewall_from_Microsoft_Teams
