--- a/workflows/Check_Host_Block_Status_with_Palo_Alto_Firewall_from_Microsoft_Teams/workflow.spec.yaml
+++ b/workflows/Check_Host_Block_Status_with_Palo_Alto_Firewall_from_Microsoft_Teams/workflow.spec.yaml
@@ -2,7 +2,7 @@ extension: workflow
 products: ["insightconnect"]
 name: Check_Host_Block_Status_with_Palo_Alto_Firewall_from_Microsoft_Teams
 title: "Check Host Block Status with Palo Alto Firewall from Microsoft Teams"
-description: This workflow accepts a Microsoft Teams command, checks if an IP address is blocked, and posts if the IP address is blocked.
+description: Check if an IP address is blocked via Microsoft Teams.
 version: 1.0.0
 vendor: rapid7
 support: rapid7
@@ -23,4 +23,3 @@ resources:
     title: Workflow View Bottom
   - name: teams_flow1.png
     title: Sample Output from Microsoft Teams
-
