--- a/workflows/Lookup_InsightVM_Host_Info_From_Teams/workflow.spec.yaml
+++ b/workflows/Lookup_InsightVM_Host_Info_From_Teams/workflow.spec.yaml
@@ -9,7 +9,7 @@ support: rapid7
 status: []
 hub_tags:
   use_cases: [vulnerability_management, asset_inventory]
-  keywords: [InsightVM, Slack, chat, work_from_home]
+  keywords: [InsightVM, chatops, chat, work_from_home]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Lookup_InsightVM_Host_Info_From_Teams
