--- a/workflows/Lookup_InsightVM_Host_Info_From_Teams/workflow.spec.yaml
+++ b/workflows/Lookup_InsightVM_Host_Info_From_Teams/workflow.spec.yaml
@@ -2,7 +2,7 @@ extension: workflow
 products: ["insightconnect", "insightvm"]
 name: Lookup_InsightVM_Host_Info_From_Teams
 title: "Lookup InsightVM Host Info from Microsoft Teams"
-description: Lookup a host, including IP, MAC, last assessment date, vulnerability statistics, and running services, from a Slack message.
+description: Lookup a host, including IP, MAC, last assessment date, vulnerability statistics, and running services, from a Microsoft Teams message.
 version: 1.0.1
 vendor: rapid7
 support: rapid7
