--- a/workflows/Block_Host_With_Fortinet_Firewall_From_Slack/workflow.spec.yaml
+++ b/workflows/Block_Host_With_Fortinet_Firewall_From_Slack/workflow.spec.yaml
@@ -22,4 +22,14 @@ hub_tags:
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Block_Host_With_Fortinet_Firewall_From_Slack
   license_url: https://github.com/rapid7/insightconnect-workflows/blob/master/LICENSE
-  screenshots: '!add screenshots!'
+  screenshots:
+    - name: workflow1.png
+    title: Workflow View
+    - name: slack_message1.png
+      title: Slack Message for Block Action
+    - name: slack_message2.png
+      title: Slack Message for Unblock Action
+    - name: artifact1.png
+      title: Artifact for Block Action
+    - name: artifact2.png
+      title: Artifact for Unblock Action
