--- a/workflows/Lookup_InsightVM_Host_Info_From_Teams/workflow.spec.yaml
+++ b/workflows/Lookup_InsightVM_Host_Info_From_Teams/workflow.spec.yaml
@@ -15,5 +15,5 @@ resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Lookup_InsightVM_Host_Info_From_Teams
   license_url: https://github.com/rapid7/insightconnect-workflows/blob/master/LICENSE
   screenshots:
-  - name: Workflow.png
+  - name: workflow.png
     title: Workflow Builder View
