--- a/workflows/Block_Host_With_Check_Point_Firewall_From_Slack/workflow.spec.yaml
+++ b/workflows/Block_Host_With_Check_Point_Firewall_From_Slack/workflow.spec.yaml
@@ -28,4 +28,6 @@ resources:
     - name: job1.png
       title: Successful Job Run
     - name: workflow1.png
-      title: Workflow
+      title: Workflow Part 1
+    - name: workflow2.png
+      title: Workflow Part 2
