--- a/workflows/Block_Host_with_Check_Point_Firewall_from_Microsoft_Teams/workflow.spec.yaml
+++ b/workflows/Block_Host_with_Check_Point_Firewall_from_Microsoft_Teams/workflow.spec.yaml
@@ -20,5 +20,7 @@ resources:
   - name: teams2.png
     title: Successful Block Host Request
   - name: workflow1.png
-    title: Workflow
+    title: Workflow Part 1
+  - name: workflow2.png
+    title: Workflow Part 2
 
