--- a/workflows/Deploy_Patch_With_BigFix_From_Slack/workflow.spec.yaml
+++ b/workflows/Deploy_Patch_With_BigFix_From_Slack/workflow.spec.yaml
@@ -1,8 +1,8 @@
 extension: workflow
 products: ["insightconnect"]
 name: Deploy_Patch_With_BigFix_From_Slack
-title: "Deploy Patch with BigFix from Slack"
-description: Deploys a specific patch to a specific host with BigFix from a Slack message trigger.
+title: "Deploy Patch with HCL BigFix from Slack"
+description: Deploys a specific patch to a specific host with HCL BigFix from a Slack message trigger.
 version: 1.0.0
 vendor: rapid7
 support: rapid7
