--- a/workflows/Deploy_Patch_With_BigFix_From_Teams/workflow.spec.yaml
+++ b/workflows/Deploy_Patch_With_BigFix_From_Teams/workflow.spec.yaml
@@ -1,9 +1,9 @@
 extension: workflow
 products: ["insightconnect"]
 name: Deploy_Patch_With_BigFix_From_Teams
-title: "Deploy Patch with BigFix from Microsoft Teams"
-description: Deploys a specific patch to a specific host with BigFix from a Microsoft Teams message trigger.
-version: 1.0.0
+title: "Deploy Patch with HCL BigFix from Microsoft Teams"
+description: Deploys a specific patch to a specific host with HCL BigFix from a Microsoft Teams message trigger.
+version: 1.0.1
 vendor: rapid7
 support: rapid7
 status: []
