--- a/workflows/Blacklist_Hash_with_CylancePROTECT_from_Slack/workflow.spec.yaml
+++ b/workflows/Blacklist_Hash_with_CylancePROTECT_from_Slack/workflow.spec.yaml
@@ -9,7 +9,7 @@ support: rapid7
 status: []
 hub_tags:
   use_cases: [threat_detection_and_response]
-  keywords: [chat, chatops, edr, work_from_home, slack]
+  keywords: [chat, chatops, edr, blacklist, containment, quarantine, work_from_home, slack]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Blacklist_Hash_with_CylancePROTECT_from_Slack
