--- a/workflows/Integration_of_InsightVM_and_Deep_Security_Virtual_Patching/workflow.spec.yaml
+++ b/workflows/Integration_of_InsightVM_and_Deep_Security_Virtual_Patching/workflow.spec.yaml
@@ -9,7 +9,7 @@ support: rapid7
 status: []
 hub_tags:
   use_cases: [vulnerability_management, remediation_management]
-  keywords: [vulnerability_management, remediation_management, insightvm]
+  keywords: [vulnerability_management, remediation_management, insightvm, trend_micro, deep_security, virtual_patching, intrusion_prevention]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Integration_of_InsightVM_and_Deep_Security_Virtual_Patching
