--- a/workflows/Quarantine_Endpoint_with_Carbon_Black_Cloud_from_Slack/workflow.spec.yaml
+++ b/workflows/Quarantine_Endpoint_with_Carbon_Black_Cloud_from_Slack/workflow.spec.yaml
@@ -1,7 +1,7 @@
 extension: workflow
 products:
 - insightconnect
-name: Quarantine_Endpoint_With_Carbon_Black_Cloud_From_Slack
+name: Quarantine_Endpoint_with_Carbon_Black_Cloud_from_Slack
 title: Quarantine Endpoint with Carbon Black Cloud from Slack
 description: Use the simplicity of Slack to quarantine and unquarantine endpoints
   in the form of Device IDs, hostnames, or IP addresses with Carbon Black Cloud.
@@ -25,4 +25,14 @@ hub_tags:
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Quarantine_Endpoint_with_Carbon_Black_Cloud_from_Slack
   license_url: https://github.com/rapid7/insightconnect-workflows/blob/master/LICENSE
-  screenshots: '!add screenshots!'
+  screenshots:
+    - name: workflow1.png
+      title: Workflow View
+    - name: message1.png
+      title: Successful Quarantine Slack Message
+    - name: message2.png
+      title: Successful Unquarantine Slack Message
+    - name: artifact1.png
+      title: Successful Quarantine Artifact
+    - name: artifact2.png
+      title: Successful Unquarantine Artifact
