--- a/workflows/Blacklist_Hash_with_CylancePROTECT_from_Microsoft_Teams/workflow.spec.yaml
+++ b/workflows/Blacklist_Hash_with_CylancePROTECT_from_Microsoft_Teams/workflow.spec.yaml
@@ -17,7 +17,7 @@ resources:
   screenshots:
     - name: workflow1.png
       title: Workflow View
-    - name: team1.png
+    - name: teams1.png
       title: Successful Blacklist Request
     - name: cylance.png
       title: Blacklisted Hash in Cylance
