update workflow spec

--- a/workflows/Quarantine_Endpoint_with_Broadcom_Symantec_Endpoint_Protection_from_Slack/workflow.spec.yaml
+++ b/workflows/Quarantine_Endpoint_with_Broadcom_Symantec_Endpoint_Protection_from_Slack/workflow.spec.yaml
@@ -19,6 +19,6 @@ resources:
     title: Successful Quarantine
   - name: slack_unquarantine.png
     title: Successful Unquarantine
-  - name: workflow1.png
+  - name: workflow.png
     title: Workflow Overview
 
