Update branding with Broadcom

--- a/workflows/Black_Hash_with_Symantec_Endpoint_Protection_from_Slack/workflow.spec.yaml
+++ b/workflows/Black_Hash_with_Symantec_Endpoint_Protection_from_Slack/workflow.spec.yaml
@@ -1,9 +1,9 @@
 extension: workflow
 products: ["insightconnect"]
 name: Black_Hash_with_Symantec_Endpoint_Protection_from_Slack
-title: Blacklist Hash with Symantec Endpoint Protection from Slack
+title: Blacklist Hash with Broadcom Symantec Endpoint Protection from Slack
 description: Use the simplicity of Slack to blacklist hashes globally with Symantec Endpoint Protection.
-version: 1.0.0
+version: 1.0.1
 vendor: rapid7
 support: rapid7
 status: []
