--- a/workflows/Blacklist_Hash_with_Symantec_Endpoint_Protection_from_Microsoft_Teams/workflow.spec.yaml
+++ b/workflows/Blacklist_Hash_with_Symantec_Endpoint_Protection_from_Microsoft_Teams/workflow.spec.yaml
@@ -21,3 +21,7 @@ resources:
       title: Successful Blacklist Request
     - name: symantec.png
       title: Blacklisted Hash in Symantec
+    - name: teams_blacklist_failure.png
+      title: Blacklist Failure
+    - name: teams_blacklist_success.png
+      title: Blacklist Success
