--- a/workflows/Quarantine_Endpoint_with_SentinelOne_from_Microsoft_Teams/workflow.spec.yaml
+++ b/workflows/Quarantine_Endpoint_with_SentinelOne_from_Microsoft_Teams/workflow.spec.yaml
@@ -1,25 +1,25 @@
 extension: workflow
 products: ["insightconnect"]
-name: Quarantine_Endpoint_with_SentinelOne_from_Slack
-title: Quarantine Endpoint with SentinelOne from Slack
-description: This workflow will Quarantine an endpoint in SentinelOne from a Slack command.
+name: Quarantine_Endpoint_with_SentinelOne_from_Microsoft_Teams
+title: Quarantine Endpoint with SentinelOne from Microsoft Teams
+description: This workflow will Quarantine an endpoint in SentinelOne from a Microsoft Teams command.
 version: 1.0.0
 vendor: rapid7
 support: rapid7
 status: []
 hub_tags:
   use_cases: [threat_detection_and_response]
-  keywords: [chat, chatops, edr, blacklist, containment, quarantine, work_from_home, slack]
+  keywords: [chat, chatops, edr, blacklist, containment, quarantine, work_from_home, Microsoft Teams]
   features: []
 resources:
-  source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Quarantine_Endpoint_with_SentinelOne_from_Slack
+  source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Quarantine_Endpoint_with_SentinelOne_from_Microsoft_Teams
   license_url: https://github.com/rapid7/insightconnect-workflows/blob/master/LICENSE
   screenshots:
     - name: workflow1.png
       title: Workflow View
-    - name: slack1.png
+    - name: teams1.png
       title: Successful Quarantine Request
-    - name: slack2.png
-      title: Successful Quarantine Request
+    - name: teams2.png
+      title: Successful Unquarantine Request
     - name: sentinelone.png
       title: Quarantined Endpoint in SentinelOne
