--- a/workflows/Quarantine_Endpoint_with_SentinelOne_from_Microsoft_Teams/workflow.spec.yaml
+++ b/workflows/Quarantine_Endpoint_with_SentinelOne_from_Microsoft_Teams/workflow.spec.yaml
@@ -2,7 +2,7 @@ extension: workflow
 products: ["insightconnect"]
 name: Quarantine_Endpoint_with_SentinelOne_from_Microsoft_Teams
 title: Quarantine Endpoint with SentinelOne from Microsoft Teams
-description: This workflow will Quarantine an endpoint in SentinelOne from a Microsoft Teams command.
+description: This workflow will quarantine an endpoint in SentinelOne from a Microsoft Teams command.
 version: 1.0.0
 vendor: rapid7
 support: rapid7
