--- a/workflows/Check_Monitored_Domains_with_DomainTools_PhishEye_from_Slack/workflow.spec.yaml
+++ b/workflows/Check_Monitored_Domains_with_DomainTools_PhishEye_from_Slack/workflow.spec.yaml
@@ -9,7 +9,7 @@ support: rapid7
 status: []
 hub_tags:
   use_cases: [threat_detection_and_response]
-  keywords: [phisheye, phishing, chatops]
+  keywords: [phisheye, phishing, chatops, work_from_home]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Check_Monitored_Domains_with_DomainTools_PhishEye_from_Slack
