--- a/workflows/Quarantine_Endpoint_with_Carbon_Black_Cloud_from_Slack/workflow.spec.yaml
+++ b/workflows/Quarantine_Endpoint_with_Carbon_Black_Cloud_from_Slack/workflow.spec.yaml
@@ -2,10 +2,10 @@ extension: workflow
 products:
 - insightconnect
 name: Quarantine_Endpoint_with_Carbon_Black_Cloud_from_Slack
-title: Quarantine Endpoint with Carbon Black Cloud from Slack
+title: Quarantine Endpoint with VMware Carbon Black Cloud from Slack
 description: Use the simplicity of Slack to quarantine and unquarantine endpoints
-  in the form of Device IDs, hostnames, or IP addresses with Carbon Black Cloud.
-version: 1.0.1
+  in the form of Device IDs, hostnames, or IP addresses with VMware Carbon Black Cloud.
+version: 1.0.2
 vendor: rapid7
 support: rapid7
 status: []
