Add screenshot to show quarantine in CB Cloud product

--- a/workflows/Quarantine_Endpoint_with_Carbon_Black_Cloud_from_Slack/workflow.spec.yaml
+++ b/workflows/Quarantine_Endpoint_with_Carbon_Black_Cloud_from_Slack/workflow.spec.yaml
@@ -36,3 +36,5 @@ resources:
       title: Successful Quarantine Artifact
     - name: artifact2.png
       title: Successful Unquarantine Artifact
+    - name: cb_quarantine.png
+      title: Quarantine in Carbon Black Cloud
