--- a/workflows/Cloud_Plugins_Usability_Test/workflow.spec.yaml
+++ b/workflows/Cloud_Plugins_Usability_Test/workflow.spec.yaml
@@ -5,7 +5,7 @@ title: "Cloud Plugins Usability Test Workflow"
 description: "This workflow is designed for usability testing for the Cloud Plugins feature."
 version: 1.0.0
 vendor: rapid7
-support: 
+support: rapid7
 status: [obsolete]
 status: []
 hub_tags:
@@ -15,4 +15,6 @@ hub_tags:
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Cloud_Plugins_Usability_Test
   license_url: https://github.com/rapid7/insightconnect-workflows/blob/master/LICENSE
-
+  screenshots:
+  - name: workflow.png
+    title: Workflow View
