--- a/workflows/Cloud_Plugins_Usability_Test/workflow.spec.yaml
+++ b/workflows/Cloud_Plugins_Usability_Test/workflow.spec.yaml
@@ -6,7 +6,7 @@ description: "This workflow is designed for usability testing for the Cloud Plug
 version: 1.0.0
 vendor: rapid7
 support: rapid7
-status: [obsolete]
+status: ["hidden"]
 status: []
 hub_tags:
   use_cases: []
