--- a/workflows/Quarantine_Asset_with_Rapid7_Insight_Agent_from_Slack/workflow.spec.yaml
+++ b/workflows/Quarantine_Asset_with_Rapid7_Insight_Agent_from_Slack/workflow.spec.yaml
@@ -10,7 +10,7 @@ status: []
 hub_tags:
   use_cases: [threat_detection_and_response]
   keywords: [quarantine, insight, agent, idr, ivm]
-  features: []
+  features: [insightagent]
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Quarantine_Asset_with_Rapid7_Insight_Agent_from_Slack
   license_url: https://github.com/rapid7/insightconnect-workflows/blob/master/LICENSE
