--- a/workflows/Enrich_URL_with_Threat_Crowd_from_Slack/workflow.spec.yaml
+++ b/workflows/Enrich_URL_with_Threat_Crowd_from_Slack/workflow.spec.yaml
@@ -9,7 +9,7 @@ support: rapid7
 status: []
 hub_tags:
   use_cases: [data_enrichment, threat_detection_and_response]
-  keywords: [slack, chat, chatops, work_from_home]]
+  keywords: [slack, chat, chatops, work_from_home]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Enrich_URL_with_Threat_Crowd_from_Slack
