--- a/workflows/Blacklist_Indicators_with_Microsoft_Defender_ATP_from_Slack/workflow.spec.yaml
+++ b/workflows/Blacklist_Indicators_with_Microsoft_Defender_ATP_from_Slack/workflow.spec.yaml
@@ -9,7 +9,7 @@ support: rapid7
 status: []
 hub_tags:
   use_cases: [threat_detection_and_response]
-  keywords: [chat, chatops, edr, blacklist, containment, quarantine, work_from_home, slack, Microsoft, Defender, ATP]
+  keywords: [chat, chatops, edr, blacklist, containment, quarantine, work_from_home, slack, microsoft, defender, windows, atp]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Blacklist_Indicators_with_Microsoft_Defender_ATP_from_Slack
